--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.8.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
